# DevTec_GameOfLife

./: CMakeLists.txt  Makefile  README.md  clear_screen.h  clear_screen_posix.c  clear_screen_windows.c  const.h  docs_conf  main.c  unit_tests.c
.github/workflows/: cmake.yml
board_animation/: delay.c  delay.h  fill_board.c  fill_board.h  init_board.c  init_board.h  init_gospers_glider_gun.c  init_gospers_glider_gun.h  next_generation_board.c  next_generation_board.h  next_generation_board_circular.c  next_generation_board_circular.h  next_generation_board_clipped.c  next_generation_board_clipped.h  num_of_neighbours.c  num_of_neighbours.h  num_of_neighbours_circular.c  num_of_neighbours_circular.h  num_of_neighbours_clipped.c  num_of_neighbours_clipped.h  print_board.c  print_board.h  update_board.c  update_board.h
game/: game.c  game.h
html/: clear__screen_8h.html  clear__screen_8h__dep__incl.dot  clear__screen_8h_source.html  clear__screen__posix_8c.html  clear__screen__posix_8c__incl.dot  clear__screen__windows_8c.html  clear__screen__windows_8c__incl.dot  files.html  globals.html  globals_defs.html  globals_func.html  main_8c.html  main_8c__incl.dot
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
latex/: clear__screen_8h.tex  clear__screen_8h.tex.tmp  clear__screen_8h__dep__incl.dot  clear__screen__posix_8c.tex  clear__screen__posix_8c__incl.dot  clear__screen__windows_8c.tex  clear__screen__windows_8c__incl.dot  files.tex  main_8c.tex  main_8c__incl.dot  refman.tex
